--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -14,10 +14,11 @@ jobs:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
       - uses: actions/setup-node@v4
         with:
-          node-version: "15"
-      - uses: pnpm/action-setup@v3.0.0
+          node-version: "18.13"
+      - uses: pnpm/action-setup@v3
         with:
-          version: 5.17.3
+          version: 8
+          run_install: false
       - run: pnpm install --frozen-lockfile
       - run: pnpm test
   publish:
@@ -40,10 +41,11 @@ jobs:
           token: ${{ secrets.PUBLISH_BOT }}
       - uses: actions/setup-node@v4
         with:
-          node-version: "15"
-      - uses: pnpm/action-setup@v3.0.0
+          node-version: "18.13"
+      - uses: pnpm/action-setup@v3
         with:
-          version: 5.17.3
+          version: 8
+          run_install: false
       - run: pnpm install --frozen-lockfile
       - name: Setup auth
         run: |
