--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@angular/service-worker": "17.3.0",
     "@angular/upgrade": "17.3.0",
     "@rollup/plugin-babel": "6.0.4",
+    "@rollup/plugin-replace": "5.0.5",
     "@rollup/plugin-terser": "0.4.4",
     "chai": "4.3.4",
     "concurrently": "8.2.2",
@@ -66,6 +67,7 @@
     "rimraf": "5.0.5",
     "rollup": "4.14.2",
     "rxjs": "7.8.1",
+    "tslib": "2.6.2",
     "typescript": "5.4.5"
   }
 }
