--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "@esm-bundle/autopublish-template",
-  "version": "20.0.20",
-  "description": "Repo to test esm-bundle's automatic publishing",
+  "name": "@esm-bundle/angular",
+  "version": "0.0.0-unpublished.0",
+  "description": "All Angular packages in ESM and SystemJS formats",
   "main": "index.js",
   "module": "esm/index.js",
   "type": "module",
   "scripts": {
+    "pretty-quick": "pretty-quick",
     "test": "pnpm run build && concurrently -n w: 'pnpm:test:*'",
     "test:browser": "karma start karma.conf.cjs --single-run",
     "debug:test:browser": "karma start karma.conf.cjs",
-    "test:unit": "mocha -r chai/register-expect 'node-test/**/*.*'",
     "test:formatting": "prettier --check .",
     "build": "rollup -c",
     "format": "prettier --write .",
@@ -19,26 +19,39 @@
     "postpublish": "pinst --enable"
   },
   "files": [
-    "esm",
+    "es2022",
     "system"
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/esm-bundle/autopublish-template.git"
+    "url": "git+https://github.com/esm-bundle/angular.git"
   },
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/esm-bundle/autopublish-template/issues"
+    "url": "https://github.com/esm-bundle/angular/issues"
   },
   "publishConfig": {
     "access": "public"
   },
-  "homepage": "https://github.com/esm-bundle/autopublish-template#readme",
+  "homepage": "https://github.com/esm-bundle/angular#readme",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "25.0.7",
-    "@rollup/plugin-node-resolve": "15.2.3",
-    "autopublish-template": "20.0.20",
+    "@angular/animations": "17.3.0",
+    "@angular/common": "17.3.0",
+    "@angular/compiler": "17.3.0",
+    "@angular/compiler-cli": "17.3.0",
+    "@angular/core": "17.3.0",
+    "@angular/elements": "17.3.0",
+    "@angular/forms": "17.3.0",
+    "@angular/localize": "17.3.0",
+    "@angular/platform-browser": "17.3.0",
+    "@angular/platform-browser-dynamic": "17.3.0",
+    "@angular/router": "17.3.0",
+    "@angular/service-worker": "17.3.0",
+    "@angular/upgrade": "17.3.0",
+    "@rollup/plugin-babel": "6.0.4",
+    "@rollup/plugin-replace": "5.0.5",
+    "@rollup/plugin-terser": "0.4.4",
     "chai": "4.3.4",
     "concurrently": "8.2.2",
     "husky": "9.0.11",
@@ -51,7 +64,10 @@
     "pretty-quick": "4.0.0",
     "release-it": "17.2.0",
     "release-it-plugin-esm-bundle": "3.0.0",
-    "rollup": "2.79.1",
-    "rollup-plugin-terser": "7.0.2"
+    "rimraf": "5.0.5",
+    "rollup": "4.14.2",
+    "rxjs": "7.8.1",
+    "tslib": "2.6.2",
+    "typescript": "5.4.5"
   }
 }
