--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
       - uses: actions/setup-node@v4
         with:
-          node-version: "18.13"
+          node-version: '18.13'
       - uses: pnpm/action-setup@v3
         with:
           version: 8
@@ -41,7 +41,7 @@ jobs:
           token: ${{ secrets.PUBLISH_BOT }}
       - uses: actions/setup-node@v4
         with:
-          node-version: "18.13"
+          node-version: '18.13'
       - uses: pnpm/action-setup@v3
         with:
           version: 8
@@ -52,5 +52,5 @@ jobs:
           git config --global user.email "$BOT_EMAIL"
           git config --global user.name "esm-bundle-org-bot"
           echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > .npmrc
-      - name: "Publish to npm"
+      - name: 'Publish to npm'
         run: pnpm run release
