--- a/package.json
+++ b/package.json
@@ -69,5 +69,10 @@
     "rxjs": "7.8.1",
     "tslib": "2.6.2",
     "typescript": "5.4.5"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "release-it-plugin-esm-bundle@3.0.0": "patches/release-it-plugin-esm-bundle@3.0.0.patch"
+    }
   }
 }
